@@ -52,13 +52,14 @@
 
 extern int scm_symhash_dim;
 
-/* SCM_LENGTH(SYM) is the length of SYM's name in characters, and
+/* SCM_SYMBOL_LENGTH(SYM) is the length of SYM's name in characters, and
  * SCM_SYMBOL_CHARS(SYM) is the address of the first character of SYM's name.
  */
 
 #define SCM_SYMBOLP(x)	(SCM_NIMP (x) && (SCM_TYP7 (x) == scm_tc7_symbol))
 #define SCM_SYMBOL_UCHARS(x)  ((unsigned char *) (SCM_CELL_WORD_1 (x)))
 #define SCM_SYMBOL_CHARS(x)  ((char *) (SCM_CELL_WORD_1 (x)))
+#define SCM_SYMBOL_LENGTH(x)  (((unsigned long) SCM_CELL_WORD_0 (x)) >> 8)
 
 #define SCM_LENGTH_MAX		(0xffffffL)
 #define SCM_LENGTH(x)		(((unsigned long) SCM_CELL_WORD_0 (x)) >> 8)
